@@ -1,5 +1,7 @@
 Version 3.0-5
 
+ o Allow "||" in variance formulae in lmer4 models
+ 
  o Minor bug in handling class=="array" in the Effect() method.
  
  o Fixed bug when the name of the data frame is the name of function like "sort" in mixed-effects models with lme4 (problem originally reported by Saudi Sadiq).
